base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-sample
  template:
    metadata:
      labels:
        app: httpd-sample
        deployment: httpd-sample
    spec:
      containers:
        - name: httpd-sample
          image: dummy-registry/image
          volumeMounts:
          - name: config
            mountPath: /config
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      volumes:
      - name: config
        configMap:
          name: configmap
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
