base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpd-sample
  labels:
    app: httpd-sample
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: httpd-sample
    deployment: httpd-sample
