base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpd-sample
  labels:
    app: httpd-sample
spec:
  to:
    kind: Service
    name: httpd-sample
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
